// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzer Report Should not trim if short enough to fit 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.get(very, long)  -> GET  /users",
  ],
  Array [
    "2. UsersController.save(very, long) -> POST /users",
  ],
  Array [],
]
`;

exports[`Analyzer Report Should only trim parameters if still long 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.get  -> GET  /users",
  ],
  Array [
    "2. UsersController.save -> POST /users",
  ],
  Array [],
]
`;

exports[`Analyzer Report Should trim long controller report 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AveryVeryVeryVer...roller.aVerry...Method -> Authenticated GET /averyveryveryveryverylongnamed/averryverryverryver...method",
  ],
  Array [
    "2. AveryVeryVeryVer...roller.anothe...Method -> Authenticated GET /averyveryveryveryverylongnamed/anotherverryverryve...method",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should be able to extends the route analyzer 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method() -> GET /animal/method
 - error PLUM1005: Just an error",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify duplicate route 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method(a) -> GET /beast/method
 - error PLUM1001: Duplicate route found in AnimalController.method(a) BeastController.method(a)",
  ],
  Array [
    "2. BeastController.method(a)  -> GET /beast/method
 - error PLUM1001: Duplicate route found in AnimalController.method(a) BeastController.method(a)",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify duplicate route from other facility if not overrideable 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. BeastController.method(a) -> GET /beast/method
 - error PLUM1001: Duplicate route found in BeastController.method(a) MyFacility",
  ],
  Array [
    "2. MyFacility                -> GET /beast/method
 - error PLUM1001: Duplicate route found in BeastController.method(a) MyFacility",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify if array doesn't have type information for parameter binding 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method(a) -> POST /animal/method
 - warning PLUM1006: Parameter binding skipped because array doesn't have element type information in (AnimalController.method.a)",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify if model doesn't have type information for parameter binding 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method(a) -> POST /animal/method
 - warning PLUM1005: Parameter binding skipped because AnimalModel doesn't have type information on its properties",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify if model doesn't have type information for parameter binding recursive 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method(a) -> POST /animal/method
 - warning PLUM1005: Parameter binding skipped because TagModel doesn't have type information on its properties",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify missing backing parameter 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method(a, b) -> GET /animal/:c
 - error PLUM1000: Route parameters (c) doesn't have appropriate backing parameter",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify missing backing parameter on root decorator 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method(a, b) -> GET /beast/:type/:a
 - error PLUM1000: Route parameters (type) doesn't have appropriate backing parameter",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should identify missing type information for data binding 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method(a) -> GET /animal/method
 - warning PLUM1004: Parameter binding skipped because action parameters doesn't have type information",
  ],
  Array [],
]
`;

exports[`Route Analyzer Should not detect duplicate route if overridable 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. BeastController.otherMethod() -> GET /beast/othermethod",
  ],
  Array [
    "2. BeastController.method(a)     -> GET /beast/method",
  ],
  Array [],
]
`;
